Ya compila error en crop

--- a/ReconocimientoDePatrones/Tarea02.TEX/Makefile
+++ b/ReconocimientoDePatrones/Tarea02.TEX/Makefile
@@ -1,41 +1,17 @@
-# Compiler and flags
-CXX := g++
-CXXFLAGS := -std=c++11 -Wall -Wextra
-LDFLAGS := `pkg-config --cflags --libs opencv4` -I/usr/include/opencv4/opencv2
+CXX=g++
+###########################################################
+## WINDOWS SECTION EVERY NAME HERE WILL USE WIN_ PREFIX
+WIN_OCV_IPATH=-I/opencv/build/install/include
+WIN_OCV_lPATH=/opencv/build/install/x64/mingw/bin
+WIN_CXXFLAGS=$(WIN_OCV_IPATH) $(WIN_OCV_IPATH)/opencv2 $(WIN_OCV_IPATH)/opencv2/core
+WIN_CXXLINKS=$(wildcard $(WIN_OCV_lPATH)/*.dll)
+###########################################################
+SRCDIR=src
+BUILDDIR=build
+BINDIR=$(BUILDDIR)/bin
+CXXFILES=$(wildcard $(SRCDIR)/*.cxx) $(wildcard $(SRCDIR)/*.cpp)
+BINTARGET=$(BINDIR)/matcar
 
-# Project structure
-SRC_DIR := src
-BUILD_DIR := build
-TARGET := $(BUILD_DIR)/MatrizCaract
-
-# Source files (adjust pattern if needed)
-SRCS := $(wildcard $(SRC_DIR)/*.cpp) $(wildcard $(SRC_DIR)/*.cxx)
-OBJS := $(patsubst $(SRC_DIR)/%.cpp,$(BUILD_DIR)/%.o,$(SRCS)) $(patsubst $(SRC_DIR)/%.cxx,$(BUILD_DIR)/%.o,$(SRCS))
-
-# Default target
-all: $(TARGET)
-
-# Link executable
-$(TARGET): $(OBJS) | $(BUILD_DIR)
-	$(CXX) $(CXXFLAGS) $^ -o $@ $(LDFLAGS)
-
-# Compile source files
-$(BUILD_DIR)/%.o: $(SRC_DIR)/%.cpp | $(BUILD_DIR)
-	$(CXX) $(CXXFLAGS) -c $< -o $@ $(LDFLAGS)
-
-# Create build directory
-$(BUILD_DIR):
-	mkdir -p $(BUILD_DIR)
-
-# Clean build artifacts
-clean:
-	rm -rf $(BUILD_DIR)
-
-# Rebuild from scratch
-rebuild: clean all
-
-# Run the program
-run: $(TARGET)
-	./$(TARGET)
-
-.PHONY: all clean rebuild run
+windowsMain:
+	echo $(WIN_CXXFLAGS)
+	$(CXX) $(CXXFILES) $(WIN_CXXLINKS) $(WIN_CXXFLAGS) -o $(BINTARGET)
